# RECAP

./: CMakeLists.txt  README.md
data/TRACERx_lung/: tracerx_lung.txt
data/breast_Razavi/: generateInput.py  generate_frequencies.ipynb  process.py
data/breast_Razavi/raw/: 1-s2.0-S1535610818303684-mmc2.xlsx  CNAs.csv  ~$1-s2.0-S1535610818303684-mmc2.xlsx
data/simulations/M12_m12/simulations_input/: s0_k1_n100_M12_m12_simulations.txt  s0_k1_n50_M12_m12_simulations.txt  s0_k2_n100_M12_m12_simulations.txt  s0_k2_n50_M12_m12_simulations.txt  s0_k3_n100_M12_m12_simulations.txt  s0_k3_n50_M12_m12_simulations.txt  s0_k4_n100_M12_m12_simulations.txt  s0_k4_n50_M12_m12_simulations.txt  s0_k5_n100_M12_m12_simulations.txt  s0_k5_n50_M12_m12_simulations.txt  s10_k1_n100_M12_m12_simulations.txt  s10_k1_n50_M12_m12_simulations.txt  s10_k2_n100_M12_m12_simulations.txt  s10_k2_n50_M12_m12_simulations.txt  s10_k3_n100_M12_m12_simulations.txt  s10_k3_n50_M12_m12_simulations.txt  s10_k4_n100_M12_m12_simulations.txt  s10_k4_n50_M12_m12_simulations.txt  s10_k5_n100_M12_m12_simulations.txt  s10_k5_n50_M12_m12_simulations.txt  s11_k1_n100_M12_m12_simulations.txt  s11_k1_n50_M12_m12_simulations.txt  s11_k2_n100_M12_m12_simulations.txt  s11_k2_n50_M12_m12_simulations.txt  s11_k3_n100_M12_m12_simulations.txt  s11_k3_n50_M12_m12_simulations.txt  s11_k4_n100_M12_m12_simulations.txt  s11_k4_n50_M12_m12_simulations.txt  s11_k5_n100_M12_m12_simulations.txt  s11_k5_n50_M12_m12_simulations.txt  (+170 more)
results/: analysis_real.ipynb
results/TRACERx_lung/: jobs.txt  k1.solution.txt  k10.solution.txt  k10_summary.tsv  k11.solution.txt  k11_summary.tsv  k12.solution.txt  k12_summary.tsv  k13.solution.txt  k13_summary.tsv  k14.solution.txt  k14_summary.tsv  k15.solution.txt  k15_summary.tsv  k1_summary.tsv  k2.solution.txt  k2_summary.tsv  k3.solution.txt  k3_summary.tsv  k4.solution.txt  k4_summary.tsv  k5.solution.txt  k5_summary.tsv  k6.solution.txt  k6_summary.tsv  k7.solution.txt  k7_summary.tsv  k8.solution.txt  k8_summary.tsv  k9.solution.txt  k9_summary.tsv  results.tsv
results/breast_Razavi/: jobs.txt  k10_r1000_c100.solution.txt  k10_r1000_c100_summary.tsv  k11_r1000_c100.solution.txt  k11_r1000_c100_summary.tsv  k12_r1000_c100.solution.txt  k12_r1000_c100_summary.tsv  k13_r1000_c100.solution.txt  k13_r1000_c100_summary.tsv  k14_r1000_c100.solution.txt  k14_r1000_c100_summary.tsv  k15_r1000_c100.solution.txt  k15_r1000_c100_summary.tsv  k1_r1000_c100.solution.txt  k1_r1000_c100_summary.tsv  k2_r1000_c100.solution.txt  k2_r1000_c100_summary.tsv  k3_r1000_c100.solution.txt  k3_r1000_c100_summary.tsv  k4_r1000_c100.solution.txt  k4_r1000_c100_summary.tsv  k5_r1000_c100.solution.txt  k5_r1000_c100_summary.tsv  k6_r1000_c100.solution.txt  k6_r1000_c100_summary.tsv  k7_r1000_c100.solution.txt  k7_r1000_c100_summary.tsv  k8_r1000_c100.solution.txt  k8_r1000_c100_summary.tsv  k9_r1000_c100.solution.txt  k9_r1000_c100_summary.tsv  results.tsv
results/simulations/: results.tsv
src/: basetree.cpp  basetree.h  clonetree.cpp  clonetree.h  inputinstance.cpp  inputinstance.h  mainanalyze.cpp  mainrecap.cpp  mcctsolver.cpp  mcctsolver.h  mcctsolverca.cpp  mcctsolverca.h  parentchildexpansion.cpp  parentchildexpansion.h  parentchildgraph.cpp  parentchildgraph.h  solution.cpp  solution.h  utils.h
(+1000 files in other folders)
